[project]
name = "mcp-iEDA"
version = "0.1.0"
description = "The mcp server for iEDA"
authors = [
    { name = "simin tao" },
]
license = { text = "Mulan PSL v2" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]"
]

[project.scripts]
mcp-iEDA = "mcp_ieda:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"