set(CMAKE_CXX_STANDARD 20)

# SET(CMAKE_BUILD_TYPE "Release")
# SET(CMAKE_BUILD_TYPE "Debug")
# # cmake debug
# set(DEBUG_INO_API ON)
# set(DEBUG_INO_IO ON)
# set(DEBUG_INO_MODULE ON)
# set(DEBUG_INO_SOURCE ON)

set(INO_PATH ${HOME_OPERATION}/iNO)
set(INO_API_PATH ${INO_PATH}/api)
set(INO_SOURCE_PATH ${INO_PATH}/source)
set(INO_CONFIG_PATH ${INO_PATH}/source/config)
set(INO_IO_PATH ${INO_PATH}/source/io)
set(INO_MODULE_PATH ${INO_PATH}/source/module)
set(INO_EXTERNAL_LIBS_PATH ${INO_PATH}/external_libs)
set(INO_TEST_PATH ${INO_PATH}/test)

ADD_SUBDIRECTORY(${INO_API_PATH})
ADD_SUBDIRECTORY(${INO_SOURCE_PATH})
ADD_SUBDIRECTORY(${INO_EXTERNAL_LIBS_PATH})
ADD_SUBDIRECTORY(${INO_TEST_PATH})
